--- a/src/Immutable/Immutable.csproj
+++ b/src/Immutable/Immutable.csproj
@@ -15,6 +15,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Immutable.SourceGeneration\Immutable.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
+    </ItemGroup>
+    
+    <ItemGroup>
         <PackageReference Include="Toarnbeike.Optional" Version="1.0.1" />
         <PackageReference Include="Toarnbeike.Results.Messaging" Version="1.0.0" />
     </ItemGroup>
