First step in generator overhaul
Single generator for all data collection. Seperate static generator classes for each file.

Improved handling of file name generation

Conditional reference to source generator from main package... only when packaging the generator is linked.

Improved TypeInfo handling

--- a/src/Immutable/Immutable.csproj
+++ b/src/Immutable/Immutable.csproj
@@ -9,13 +9,16 @@
         </Description>
         <PackageTags>immutable;domain;ddd;aggregate;repository;undo-redo;wpf;desktop;snapshot</PackageTags>
     </PropertyGroup>
-
+    
     <ItemGroup>
         <None Include="../../README.md" Pack="true" PackagePath="" />
     </ItemGroup>
 
-    <ItemGroup>
-        <ProjectReference Include="..\Immutable.SourceGeneration\Immutable.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" PrivateAssets="all" />
+    <!-- Only add the source generator when creating a package, not when building no -->
+    <ItemGroup Condition="'$(PackBuildOutput)' == 'true'">
+        <ProjectReference Include="..\Immutable.SourceGeneration\Immutable.SourceGeneration.csproj"
+                          OutputItemType="Analyzer"
+                          ReferenceOutputAssembly="false" />
     </ItemGroup>
     
     <ItemGroup>
