Introduced Immatable.Abstractions as netStandard2.0 project to make attribute type references from source generator type save

--- a/src/Immutable/Immutable.csproj
+++ b/src/Immutable/Immutable.csproj
@@ -26,4 +26,8 @@
         <PackageReference Include="Toarnbeike.Results.Messaging" Version="1.0.0" />
     </ItemGroup>
     
+    <ItemGroup>
+      <ProjectReference Include="..\Immutable.Abstractions\Immutable.Abstractions.csproj" />
+    </ItemGroup>
+    
 </Project>
