--- a/src/Immutable.SourceGeneration/Immutable.SourceGeneration.csproj
+++ b/src/Immutable.SourceGeneration/Immutable.SourceGeneration.csproj
@@ -10,4 +10,12 @@
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.*" PrivateAssets="all" />
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="4.*" PrivateAssets="all" />
     </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Immutable.Abstractions\Immutable.Abstractions.csproj"
+                          OutputItemType="Analyzer"
+                          ReferenceOutputAssembly="true"
+                          PrivateAssets="all" />
+    </ItemGroup>
+
 </Project>
